# arrow-adbc

./: .asf.yaml  .clang-tidy  .codespell-dictionary  .codespell-ignore  .codespellrc  .env  .flake8  .flake8.cython  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DB2_STATUS_REPORT.md  DB2_TESTING_GUIDE.md  LICENSE.txt  NOTICE.txt  PRACTICAL_GUIDE.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TODO  UI_APP_GUIDE.md  USER_GUIDE.md  VSCODE_GUIDE.md  adbc.h  compose.yaml  databricks.md  db2_ui_app.py  docker-compose.yml  example_usage.py  index.html  license.tpl  meson.build  options.md  pr_description.md  (+10 more)
c/: .gitignore  CMakeLists.txt  CMakePresets.json  meson.build  meson.options  symbols.map  vcpkg.json  version.rc.in
c/apidoc/: Doxyfile
c/cmake_modules/: AdbcDefines.cmake  AdbcVersion.cmake  BuildUtils.cmake  DefineOptions.cmake  GoUtils.cmake  README.md  san-config.cmake
c/driver/: util.h
c/driver/bigquery/: .gitignore  AdbcDriverBigQueryConfig.cmake.in  CMakeLists.txt  README.md  adbc-driver-bigquery.pc.in  bigquery.cc  bigquery_test.cc  connection.cc  connection.h  database.cc  database.h  inputstream.h  meson.build  readrowsiterator.cc  readrowsiterator.h  statement.cc  statement.h  utils.h
c/driver/common/: AdbcDriverCommonConfig.cmake.in  CMakeLists.txt  driver_base.h  driver_test.cc  meson.build  options.h  test_utils.cc  utils.c  utils.h  utils_test.cc
c/driver/db2/: AdbcDriverDb2Config.cmake.in  CMakeLists.txt  README.md  adbc-driver-db2.pc.in  connection.cc  connection.h  database.cc  database.h  db2.cc  db2_odbc.h  db2_test.cc  error.cc  error.h  meson.build  result_reader.cc  result_reader.h  statement.cc  statement.h  type_mapping.cc  type_mapping.h
c/driver/flight_sql/: CMakeLists.txt  flight_sql.cc  flight_sql_test.cc
c/driver/flightsql/: AdbcDriverFlightSQLConfig.cmake.in  CMakeLists.txt  README.md  adbc-driver-flightsql.pc.in  dremio_flightsql_test.cc  meson.build  sqlite_flightsql_test.cc
c/driver/framework/: AdbcDriverFrameworkConfig.cmake.in  CMakeLists.txt  base.cc  base.h  base_client.h  base_connection.h  base_database.h  base_driver.cc  base_driver.h  base_driver_test.cc  base_statement.h  catalog.cc  catalog.h  client.h  connection.h  database.h  meson.build  objects.cc  objects.h  statement.h  status.h  type_fwd.h  utility.cc  utility.h
c/driver/netezza/: AdbcDriverNetezzaConfig.cmake.in  CMakeLists.txt  CMakeUserPresets.example.json  README.md  adbc-driver-netezza.pc.in  connection.cc  connection.h  constants.h  database.cc  database.h  error.cc  (+14 more)
c/driver_manager/: AdbcDriverManagerConfig.cmake.in  CMakeLists.txt  README.md  adbc-driver-manager.pc.in  adbc_driver_manager.cc  adbc_driver_manager.h  adbc_driver_manager_api.cc  adbc_driver_manager_internal.h  adbc_driver_manager_profiles.cc  adbc_driver_manager_test.cc  adbc_version_100.c  adbc_version_100.h  adbc_version_100_compatibility_test.cc  current_arch.h  entrypoint.c  meson.build  vcpkg.json
c/drivers/: test_util.h
c/include/: adbc.h  adbc_driver_manager.h
c/subprojects/: duckdb.wrap  nanoarrow.wrap
c/validation/: AdbcValidationConfig.cmake.in  CMakeLists.txt  README.md  adbc_validation.c  adbc_validation.cc  adbc_validation.h  adbc_validation_connection.cc  adbc_validation_database.cc  adbc_validation_statement.cc  adbc_validation_util.cc  adbc_validation_util.h  meson.build
drivers/flight_sql/: CMakeLists.txt  flight_sql.cc  flight_sql_test.cc
glib/: .gitignore  Gemfile  README.md  meson.build  meson_options.txt
glib/adbc-arrow-glib/: adbc-arrow-glib.h  connection.c  connection.h  meson.build  statement.c  statement.h  version.h.in
glib/adbc-glib/: adbc-glib-raw.h  adbc-glib.h  connection-raw.h  connection.c  connection.h  database-raw.h  database.c  database.h  error-raw.h  error.c  error.h  meson.build  statement-raw.h  statement.c  statement.h  version.h.in
glib/example/: README.md  meson.build  sqlite.c
glib/subprojects/: arrow-adbc.wrap
glib/test/: helper.rb  run.rb  run.sh  test-arrow-connection.rb  test-arrow-statement.rb  test-connection.rb  test-database.rb  test-isolation-level.rb  test-statement.rb  test-statistic-key.rb
glib/tool/: generate-version-header.py
java/: CMakeLists.txt  pom.xml
java/.checker-framework/: java.util.Objects.astub  org.apache.arrow.adapter.jdbc.JdbcToArrowUtils.astub  org.apache.arrow.util.AutoCloseables.astub  org.apache.arrow.vector.types.pojo.ArrowType.astub  org.junit.jupiter.api.Assumptions.astub
java/core/: pom.xml
java/driver-manager/: pom.xml
java/sql/: pom.xml
javascript/: .editorconfig  .gitattributes  .gitignore  .prettierignore  .taplo.toml  Cargo.toml  LICENSE.txt  README.md  about.toml  binding.d.ts  binding.js  build.rs  license.hbs  package-lock.json  package.json  rustfmt.toml  tsconfig.json  typedoc.json
javascript/.cargo/: config.toml
javascript/.husky/: pre-commit
javascript/__test__/: bind.spec.ts  error_handling.spec.ts  ingest.spec.ts  metadata.spec.ts  options.spec.ts  profile.spec.ts  query.spec.ts  safety.spec.ts  test_utils.ts  transaction.spec.ts
javascript/lib/: error.ts  index.ts  types.ts
javascript/src/: client.rs  lib.rs
python/adbc_driver_manager/: .gitignore  MANIFEST.in  README.md  build.py  meson.build  pyproject.toml  requirements-dev.txt  setup.py
python/adbc_driver_netezza/: .gitignore  README.md  asv.conf.json  pyproject.toml  setup.py
python/adbc_driver_postgres/: .gitignore  MANIFEST.in  README.md  build.py  pyproject.toml  requirements-dev.txt  setup.py
python/adbc_driver_snowflake/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
rust/: .gitignore  Cargo.toml  README.md
rust/bindings/: Cargo.toml  adbc.h  adbc.rs  build.rs
rust/core/: Cargo.toml
rust/driver_manager/: Cargo.toml  build.rs
rust/ffi/: Cargo.toml
rust/src/: driver_manager.rs  error.rs  ffi.rs  info.rs  interface.rs  lib.rs  objects.rs  utils.rs
rust/tests/: test_driver_manager.rs  test_implement.rs
rust2/: Cargo.toml  README.md
rust2/core/: Cargo.toml
(+7695 files in other folders)
