# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option('tests', type: 'boolean', description: 'Build tests', value: false)
option('benchmarks', type: 'boolean', description: 'Build benchmarks', value: false)
option(
  'bigquery',
  type: 'boolean',
  description: 'Build ADBC BigQuery driver',
  value: false
)
option(
  'flightsql',
  type: 'boolean',
  description: 'Build ADBC FlightSQL driver',
  value: false
)
option(
  'driver_manager',
  type: 'boolean',
  description: 'Build ADBC Driver Manager',
  value: false
)
option(
  'postgresql',
  type: 'boolean',
  description: 'Build ADBC PostgreSQL Driver',
  value: false
)
option(
  'sqlite',
  type: 'boolean',
  description: 'Build ADBC SQLite Driver',
  value: false
)
option(
  'snowflake',
  type: 'boolean',
  description: 'Build ADBC Snowflake Driver',
  value: false
)
