# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option('tests', type: 'feature', description: 'Build tests')
option('benchmarks', type: 'feature', description: 'Build benchmarks')
option('bigquery', type: 'feature', description: 'Build ADBC BigQuery driver')
option('flightsql', type: 'feature', description: 'Build ADBC FlightSQL driver')
option('driver_manager', type: 'feature', description: 'Build ADBC Driver Manager')
option('postgresql', type: 'feature', description: 'Build ADBC PostgreSQL Driver')
option('sqlite', type: 'feature', description: 'Build ADBC SQLite Driver')
option('snowflake', type: 'feature', description: 'Build ADBC Snowflake Driver')
