# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
edition = "2021"
name = "adbc_driver_manager_node"
version = "0.23.0"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
adbc_core = { path = "../rust/core" }
adbc_driver_manager = { path = "../rust/driver_manager" }
arrow-array = { version = ">=53.1.0", default-features = false, features = ["ffi"] }
arrow-ipc = { version = ">=53.1.0" }
arrow-schema = { version = ">=53.1.0" }
thiserror = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
