# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["bindings"]

[workspace.package]
version = "0.9.0-SNAPSHOT"
edition = "2021"
rust-version = "1.62"
homepage = "https://arrow.apache.org/adbc/"
repository = "https://github.com/apache/arrow-adbc"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow", "database", "sql"]

[package]
name = "arrow-adbc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust implementation of Arrow Database Connectivity (ADBC)"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []
substrait = ["dep:substrait"]
substrait-protoc = ["substrait?/protoc"]

[dependencies]
arrow-adbc-sys = { path = "bindings" }
arrow-array = { version = "49.0.0", default-features = false}
arrow-schema = { version = "49.0.0", features = ["ffi"], default-features = false}
arrow-data = { version = "49.0.0", features = ["ffi"], default-features = false}
async-trait = "0.1.74"
libloading = "0.8.1"
num_enum = "0.7.1"
once_cell = "1.18.0"
substrait = { version = "0.20.0", optional = true }
