# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "arrow-adbc"
version = "0.10.0-SNAPSHOT"
edition = "2021"
rust-version = "1.62"
description = "Rust implementation of Arrow Database Connectivity (ADBC)"
homepage = "https://arrow.apache.org/adbc/"
repository = "https://github.com/apache/arrow-adbc"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow", "database", "sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = { version = "44.0.0", default-features = false}
arrow-schema = { version = "44.0.0", features = ["ffi"], default-features = false}
arrow-data = { version = "44.0.0", features = ["ffi"], default-features = false}
async-trait = "0.1"
libloading = "0.7"
num_enum = "0.5"
once_cell = "1"
substrait = { version = "0.5", optional = true }

[dev-dependencies]
itertools = "0.10"

[features]
substrait = ["dep:substrait"]
