[workspace]
members = ["core", "drivers/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Rust implementation of Arrow Database Connectivity (ADBC)"
edition = "2021"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
license = "Apache-2.0"

[workspace.dependencies]
arrow = { version = "51.0.0", default-features = false, features = ["ffi"] }
adbc_core = { path = "./core" }
